fix: image size, score board alignment

--- a/src/Components/styles/header.css
+++ b/src/Components/styles/header.css
@@ -8,4 +8,5 @@
   top: 0;
   background-color: #151515;
   color: #999999;
+  z-index: 6;
 }
